--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Weight/Weight.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Weight/Weight.cshtml
@@ -7,19 +7,15 @@
 @model KCASM_AppWeb.Models.ForView.Weights
 
 <fieldset style="margin-top: 2em; margin-bottom: 2em;">
-    <legend></legend>
-    <form id="form_details" method="post">
+    <legend>Aggiungi il peso odierno</legend>
+    <form id="form_details" method="post" action="/Weight/NewWeight">
         <div class="form-group">
             <div class="col-md-3">
-                <label>Data inizio</label>
-                <input class="date-mode form-control" type="date" name="start_date" placeholder="data d'inizio" min="2018-01-01" required />
-            </div>
-            <div class="col-md-3">
-                <label>Data fine</label>
-                <input class="date-mode form-control" type="date" name="end_date" placeholder="data di fine" min="2018-01-02" required />
+                <label>Nuovo Peso</label>
+                <input type="number" step="0.01" name="weight" placeholder="nuovo peso" required />
             </div>
             <div class="col-md-2">
-                <input style="margin-top: 1.73em" class="btn btn-primary" type="submit" value="Controlla" />
+                <input style="margin-top: 1.73em" class="btn btn-primary" type="submit" value="Aggiungi" />
             </div>
         </div>
     </form>
