--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
@@ -99,11 +99,11 @@
                 </div>
                 <div>
                     <label>Nuova password</label>
-                    <input class="form-control" type="password" name="new_password" required />
+                    <input class="form-control" type="password" name="new_password" />
                 </div>
                 <div>
                     <label>Conferma della nuova password</label>
-                    <input class="form-control" type="password" name="new_password2" required />
+                    <input class="form-control" type="password" name="new_password2" />
                 </div>
             </div>
             <div class="col-md-1">
