--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Home/Index.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Home/Index.cshtml
@@ -1,38 +1,50 @@
-﻿<div class="container">
-    <div class="card card-container">
-        <p id="welcome">Keep Calm And Stay Mom</p>
+﻿
 
-        <form class="form-signin" style="text-align: center;" method="post" action="/Home/Login">
-            <div class="form-group">
-                <input type="text" name="email" class="form-control" placeholder="Email address" required autofocus>
-            </div>
-            <div class="form-group">
-                <input type="password" name="password" class="form-control" placeholder="Password" required>
-            </div>
-            <input class="btn btn-primary" type="submit" value="Login" />
-        </form>
+<p id="welcome">Keep Calm And Stay Mom</p>
 
-        <p class="forgot-password" style="cursor: pointer; margin-top: 1em;">Recupera la Password</p>
-        <form id="recovery" method="post" style="display: none; text-align: center;" action="/Home/PasswordForgot">
-            <div class="form-group">
-                <input type="text" name="name" class="form-control" placeholder="Username or Email address" required>
+<p> Possibile logo /immagine</p>
 
-            </div>
-            <input class="btn btn-primary" type="submit" value="Recupera" />
-        </form>
+<p> Possibile descrizione</p>
+
+@if (ViewData["Session"].Equals("NotLogged"))
+{
+    <div class="container">
+        <div class="card card-container">
+            <form class="form-signin" style="text-align: center;" method="post" action="/Home/Login">
+                <div class="form-group">
+                    <input type="text" name="email" class="form-control" placeholder="Email address" required autofocus>
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" class="form-control" placeholder="Password" required>
+                </div>
+                <input class="btn btn-primary" type="submit" value="Login" />
+            </form>
+
+            <p class="forgot-password" style="cursor: pointer; margin-top: 1em;">Recupera la Password</p>
+            <form id="recovery" method="post" style="display: none; text-align: center;" action="/Home/PasswordForgot">
+                <div class="form-group">
+                    <input type="text" name="name" class="form-control" placeholder="Username or Email address" required>
+
+                </div>
+                <input class="btn btn-primary" type="submit" value="Recupera" />
+            </form>
+            <p>@ViewData["result"]</p>
+        </div>
     </div>
-</div>
+}
 
-<p>@ViewData["result"]</p>
 
-<script>$(document).ready(function(){
-    $(".forgot-password").click(function () {
-        if ($("#recovery").css('display') == 'none')
-            $("#recovery").show();
-        else
-            $("#recovery").hide();
-    });
-});</script>
+
+
+<script>
+    $(document).ready(function () {
+        $(".forgot-password").click(function () {
+            if ($("#recovery").css('display') == 'none')
+                $("#recovery").show();
+            else
+                $("#recovery").hide();
+        });
+    });</script>
 
 <style>
 
